--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
     "xlsx-js-style": "^1.2.0"
