--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pandas": "^0.0.3",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "chartjs": "^0.3.24",
     "file-saver": "^2.0.5",
+    "flask": "^0.2.10",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
+    "ml-regression": "^5.0.0",
+    "numpy": "^0.0.1",
+    "python": "^0.0.4",
+    "scikit-learn": "^0.1.0",
+    "simple-statistics": "^7.8.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
     "xlsx-js-style": "^1.2.0"
